initial commit of uber_machine_learning

--- a/Banking-Spark_2.2.ipynb
+++ b/Banking-Spark_2.2.ipynb
@@ -53,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     " val df = (spark.read\n",
