updating Uber mLearning

--- a/UBER_Using_SparkSession.ipynb
+++ b/UBER_Using_SparkSession.ipynb
@@ -865,14 +865,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "val Array = "
+    "val Array(trainData, testData) = df2.randomSplit(Array(0.7,0.3),5043)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of records: 564516\n",
+      "Train Data: 395210                                                              \n",
+      "Test Data: 169306\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"Total number of records: \"+ df2.count())\n",
+    "println(\"Train Data: \"+ trainData.count())\n",
+    "println(\"Test Data: \"+ testData.count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create Kmeans Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val kmeans = new KMeans().setK(20).setFeaturesCol(\"Features\").setMaxIter(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Apply Algorithm to Training Data - Prepare Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "val model = kmeans.fit(trainData)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Show Cluster Centers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[40.68498861365522,-73.9835871097003]\n",
+      "[40.84876813158571,-73.91971901824726]\n",
+      "[40.78424090909091,-73.40033454545453]\n",
+      "[40.6501247224359,-73.78453849620782]\n",
+      "[40.73719344227073,-73.99542204804449]\n",
+      "[40.69619759036142,-74.20409916589435]\n",
+      "[40.986481092436975,-73.79391680672269]\n",
+      "[40.62038563864989,-74.00988577101258]\n",
+      "[40.64636975697572,-73.95272949294925]\n",
+      "[40.76485750538338,-73.98367140046058]\n",
+      "[40.718772502941576,-74.00578764244156]\n",
+      "[40.74397457098284,-73.65963042121687]\n",
+      "[40.76615406443993,-73.86749417676602]\n",
+      "[40.75318931266599,-73.97659102733353]\n",
+      "[40.881005390835575,-74.11521482479786]\n",
+      "[41.18550384615385,-73.18177307692308]\n",
+      "[40.720193649523566,-73.95362804975633]\n",
+      "[41.04914890109891,-73.57315384615387]\n",
+      "[40.77880295398384,-73.95852999882308]\n",
+      "[40.68992456655477,-73.93087878914984]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.clusterCenters.foreach(println)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check the Cluster for Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "val category = model.transform(testData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+-------+--------+------+------------------+----------+\n",
+      "|        Date/Time|    Lat|     Lon|  Base|          Features|prediction|\n",
+      "+-----------------+-------+--------+------+------------------+----------+\n",
+      "| 4/1/2014 0:00:00|40.7188|-73.9863|B02598|[40.7188,-73.9863]|        10|\n",
+      "| 4/1/2014 0:02:00|40.7556|-73.9874|B02598|[40.7556,-73.9874]|         9|\n",
+      "| 4/1/2014 0:11:00|40.7322|-73.9867|B02598|[40.7322,-73.9867]|         4|\n",
+      "| 4/1/2014 0:16:00|40.7748| -73.954|B02598| [40.7748,-73.954]|        18|\n",
+      "| 4/1/2014 0:39:00|40.7387|-74.0033|B02598|[40.7387,-74.0033]|         4|\n",
+      "| 4/1/2014 0:52:00|40.7611|-73.9694|B02598|[40.7611,-73.9694]|        13|\n",
+      "|4/1/2014 10:02:00|40.7172|-73.9537|B02598|[40.7172,-73.9537]|        16|\n",
+      "|4/1/2014 10:03:00|40.6375|-74.6377|B02598|[40.6375,-74.6377]|         5|\n",
+      "|4/1/2014 10:03:00|40.7056|-74.0088|B02598|[40.7056,-74.0088]|        10|\n",
+      "|4/1/2014 10:03:00|40.7082|-74.0142|B02598|[40.7082,-74.0142]|        10|\n",
+      "+-----------------+-------+--------+------+------------------+----------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "category.show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Register DF as a Temp Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category.createOrReplaceTempView(\"Uber\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How many pick-ups occurred in each cluster?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+-----------+\n",
+      "|LOCATION_CATEGORY|NO_OF_TRIPS|\n",
+      "+-----------------+-----------+\n",
+      "|                4|      43895|\n",
+      "|               13|      27607|\n",
+      "|               10|      27251|\n",
+      "|                9|      21039|\n",
+      "|               18|      18158|\n",
+      "|                0|       8304|\n",
+      "|               16|       5972|\n",
+      "|               12|       4297|\n",
+      "|                3|       3733|\n",
+      "|               19|       3107|\n",
+      "|                1|       1712|\n",
+      "|                8|       1435|\n",
+      "|                5|       1371|\n",
+      "|                7|        640|\n",
+      "|               11|        271|\n",
+      "|                6|        215|\n",
+      "|               14|        167|\n",
+      "|               17|         74|\n",
+      "|                2|         44|\n",
+      "|               15|         14|\n",
+      "+-----------------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"SELECT prediction AS LOCATION_CATEGORY, COUNT(prediction) AS NO_OF_TRIPS FROM Uber GROUP BY LOCATION_CATEGORY ORDER BY NO_OF_TRIPS DESC\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hour with the Highest Pick-ups and at what cluster?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
