Change the Header to False

--- a/MovieRating_using_SparkSession.ipynb
+++ b/MovieRating_using_SparkSession.ipynb
@@ -9,8 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import org.apache.spark.sql.SparkSession\n",
@@ -26,8 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "val spark = SparkSession.\n",
@@ -47,8 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "val schemaRating = StructType(List(StructField(\"userId\", IntegerType, true),\n",
@@ -56,14 +62,15 @@
     "                                    StructField(\"rating\", IntegerType, true), \n",
     "                                    StructField(\"timeStamp\", StringType, true)\n",
     "                                    )\n",
-    "                                 ) \n",
-    "                                 "
+    "                                 ) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "val schemaUser = StructType(List(StructField(\"userId\", IntegerType, true),\n",
@@ -84,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "//Load the Ratings data\n",
     "\n",
     "val dfRating = spark.read.\n",
-    "                        option(\"header\", true).\n",
+    "                        option(\"header\", false).\n",
     "                        schema(schemaRating).\n",
     "                        option(\"delimiter\", \"\\t\").\n",
     "                        csv(\"data/u.data\")\n",
@@ -100,14 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "//Load the Users data\n",
     "\n",
     "val dfUser = spark.read.\n",
-    "                        option(\"header\", true).\n",
+    "                        option(\"header\", false).\n",
     "                        schema(schemaUser).\n",
     "                        option(\"delimiter\", \"|\").\n",
     "                        csv(\"data/u.user\")\n",
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,11 +142,11 @@
       "+------+-------+------+---------+\n",
       "|userId|movieId|rating|timeStamp|\n",
       "+------+-------+------+---------+\n",
+      "|   196|    242|     3|881250949|\n",
       "|   186|    302|     3|891717742|\n",
       "|    22|    377|     1|878887116|\n",
       "|   244|     51|     2|880606923|\n",
       "|   166|    346|     1|886397596|\n",
-      "|   298|    474|     4|884182806|\n",
       "+------+-------+------+---------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -162,11 +171,11 @@
       "+------+---+------+----------+-------+\n",
       "|userId|age|gender|occupation|zipCode|\n",
       "+------+---+------+----------+-------+\n",
+      "|     1| 24|     M|technician|  85711|\n",
       "|     2| 53|     F|     other|  94043|\n",
       "|     3| 23|     M|    writer|  32067|\n",
       "|     4| 24|     M|technician|  43537|\n",
       "|     5| 33|     F|     other|  15213|\n",
-      "|     6| 42|     M| executive|  98101|\n",
       "+------+---+------+----------+-------+\n",
       "only showing top 5 rows\n",
       "\n"
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -285,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -297,7 +306,7 @@
       "+--------+\n",
       "|count(1)|\n",
       "+--------+\n",
-      "|   99999|\n",
+      "|  100000|\n",
       "+--------+\n",
       "\n"
      ]
@@ -310,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -354,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -405,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -433,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -443,6 +452,7 @@
       "+------+---+------+-------------+-------+\n",
       "|userId|age|gender|   occupation|zipCode|\n",
       "+------+---+------+-------------+-------+\n",
+      "|     1| 24|     M|   technician|  85711|\n",
       "|     2| 53|     F|        other|  94043|\n",
       "|     3| 23|     M|       writer|  32067|\n",
       "|     4| 24|     M|   technician|  43537|\n",
@@ -462,7 +472,6 @@
       "|    18| 35|     F|        other|  37212|\n",
       "|    19| 40|     M|    librarian|  02138|\n",
       "|    20| 42|     F|    homemaker|  95660|\n",
-      "|    21| 26|     M|       writer|  30068|\n",
       "+------+---+------+-------------+-------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -475,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +494,7 @@
       "+------------+\n",
       "|NUM_Reviewer|\n",
       "+------------+\n",
-      "|         942|\n",
+      "|         943|\n",
       "+------------+\n",
       "\n"
      ]
@@ -497,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +517,7 @@
       "|gender| No|\n",
       "+------+---+\n",
       "|     F|273|\n",
-      "|     M|669|\n",
+      "|     M|670|\n",
       "+------+---+\n",
       "\n"
      ]
@@ -520,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -530,26 +539,26 @@
       "+------+---+------+----------+-------+------+\n",
       "|userId|age|gender|occupation|movieId|rating|\n",
       "+------+---+------+----------+-------+------+\n",
-      "|     2| 53|     F|     other|    296|     3|\n",
-      "|     2| 53|     F|     other|    302|     5|\n",
-      "|     2| 53|     F|     other|    275|     5|\n",
-      "|     2| 53|     F|     other|    286|     4|\n",
-      "|     2| 53|     F|     other|    288|     3|\n",
-      "|     2| 53|     F|     other|    278|     3|\n",
-      "|     2| 53|     F|     other|    272|     5|\n",
-      "|     2| 53|     F|     other|    304|     4|\n",
-      "|     2| 53|     F|     other|    289|     3|\n",
-      "|     2| 53|     F|     other|    285|     5|\n",
-      "|     2| 53|     F|     other|    127|     5|\n",
-      "|     2| 53|     F|     other|    100|     5|\n",
-      "|     2| 53|     F|     other|    300|     4|\n",
-      "|     2| 53|     F|     other|    237|     4|\n",
-      "|     2| 53|     F|     other|    274|     3|\n",
-      "|     2| 53|     F|     other|    284|     4|\n",
-      "|     2| 53|     F|     other|    255|     4|\n",
-      "|     2| 53|     F|     other|    269|     4|\n",
-      "|     2| 53|     F|     other|    311|     5|\n",
-      "|     2| 53|     F|     other|     10|     2|\n",
+      "|     1| 24|     M|technician|     94|     2|\n",
+      "|     1| 24|     M|technician|    152|     5|\n",
+      "|     1| 24|     M|technician|    122|     3|\n",
+      "|     1| 24|     M|technician|    172|     5|\n",
+      "|     1| 24|     M|technician|     28|     4|\n",
+      "|     1| 24|     M|technician|     13|     5|\n",
+      "|     1| 24|     M|technician|     88|     4|\n",
+      "|     1| 24|     M|technician|     52|     4|\n",
+      "|     1| 24|     M|technician|    111|     5|\n",
+      "|     1| 24|     M|technician|     15|     5|\n",
+      "|     1| 24|     M|technician|     59|     5|\n",
+      "|     1| 24|     M|technician|     18|     4|\n",
+      "|     1| 24|     M|technician|     29|     1|\n",
+      "|     1| 24|     M|technician|     19|     5|\n",
+      "|     1| 24|     M|technician|    244|     2|\n",
+      "|     1| 24|     M|technician|    207|     5|\n",
+      "|     1| 24|     M|technician|      3|     4|\n",
+      "|     1| 24|     M|technician|    204|     5|\n",
+      "|     1| 24|     M|technician|    231|     1|\n",
+      "|     1| 24|     M|technician|     83|     3|\n",
       "+------+---+------+----------+-------+------+\n",
       "only showing top 20 rows\n",
       "\n"
