--- a/JupyterNotebook_Demo_Scala.ipynb
+++ b/JupyterNotebook_Demo_Scala.ipynb
@@ -4,15 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Simple Spark Demo using Toree"
+    "#### Simple Spark Demo"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is Jupyter Notebook using Toree\n",
-    "- to demonstrate  how to access Standalone Spark in Jupyter with Scala, PySpark and SQL."
+    "This is to demonstrate  how to access Standalone Spark in Jupyter with Scala, PySpark and SQL."
    ]
   },
   {
